Login success! Stopping point: https://www.youtube.com/watch?v=IVdBDYQdN4Q&list=PL82C6-O4XrHccS2fD8tdEF9UoO3VwKeGK&index=4

--- a/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
+++ b/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>ASP.NET_Core_MVC_Identity.NET6</RootNamespace>
+    <UserSecretsId>a9aafc3a-f455-4ce9-8b5d-cbbc70b3c17c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
