added three.js for 3D environment

--- a/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
+++ b/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\Three_js\three.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
