--- a/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
+++ b/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
@@ -22,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
