--- a/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
+++ b/ASP.NET Core MVC Identity.NET6/ASP.NET Core MVC Identity.NET6.csproj
@@ -27,4 +27,11 @@
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\ThreeJS\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
